# ConverterTMI

./: .gitignore  CMakeLists.txt  main.cpp
TMIConverter/: CMakeLists.txt  main.cpp
TMIConverterLib/: CMakeLists.txt  tmiConverter.cpp  tmiConverter.hpp
TMIGenerator/: CMakeLists.txt  main.cpp  tmiGenerator.cpp  tmiGenerator.hpp
tmi/: 2023-08-02_19-10-47_UDP_38261_1.sspp
